fix env and add endpoint for homepage
