# model/category.go
@@ -1,0 +1,10 @@
+package model
+
+import "github.com/google/uuid"
+
+type ResponseForHomePage struct {
+	ID           uuid.UUID `json:"id"`
+	Name         string    `json:"name"`
+	UrlCategory  string    `json:"url_category"`
+	TotalProduct int       `json:"total_product"`
+}
